--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "cordova-sqlite-storage": "3.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
+    "tslib": "^1.10.0",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
@@ -70,7 +71,7 @@
     "node-sass": "^4.12.0",
     "protractor": "~5.4.0",
     "ts-node": "~8.0.0",
-    "tslint": "~5.12.0",
+    "tslint": "~5.20.0",
     "typescript": "~3.1.6"
   },
   "description": "An Ionic project",
