--- a/package.json
+++ b/package.json
@@ -13,66 +13,69 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^7.2.2",
-    "@angular/core": "^7.2.2",
-    "@angular/forms": "^7.2.2",
-    "@angular/http": "^7.2.2",
-    "@angular/platform-browser": "^7.2.2",
-    "@angular/platform-browser-dynamic": "^7.2.2",
-    "@angular/router": "^7.2.2",
-    "@ionic-native/camera": "^5.1.0",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/file-transfer": "^5.1.0",
-    "@ionic-native/geolocation": "^5.1.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.9.0",
+    "@angular/common": "^8.2.8",
+    "@angular/core": "^8.2.8",
+    "@angular/forms": "^8.2.8",
+    "@angular/platform-browser": "^8.2.8",
+    "@angular/platform-browser-dynamic": "^8.2.8",
+    "@angular/router": "^8.2.8",
+    "@ionic-native/camera": "^5.14.0",
+    "@ionic-native/core": "^5.14.0",
+    "@ionic-native/file-transfer": "^5.14.0",
+    "@ionic-native/geolocation": "^5.14.0",
+    "@ionic-native/splash-screen": "^5.14.0",
+    "@ionic-native/status-bar": "^5.14.0",
+    "@ionic/angular": "^4.10.0",
     "@ionic/storage": "^2.2.0",
     "@swimlane/ngx-datatable": "^16.0.2",
-    "cordova-android": "7.1.4",
-    "cordova-ios": "4.5.5",
-    "cordova-plugin-camera": "4.0.3",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-file": "6.0.1",
+    "cordova-android": "^8.1.0",
+    "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-transfer": "1.7.1",
-    "cordova-plugin-geolocation": "4.0.1",
-    "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^3.1.2",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "3.0.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
+    "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.1.2",
+    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
+    "cordova-sqlite-storage": "^3.4.0",
+    "core-js": "^3.2.1",
+    "npm-check-updates": "^3.1.23",
+    "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
-    "zone.js": "~0.8.29"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.12.3",
-    "@angular-devkit/build-angular": "^0.12.4",
-    "@angular-devkit/core": "~7.2.3",
-    "@angular-devkit/schematics": "~7.2.3",
-    "@angular/cli": "~7.2.3",
-    "@angular/compiler": "~7.2.2",
-    "@angular/compiler-cli": "^7.2.15",
-    "@angular/language-service": "~7.2.2",
-    "@ionic/angular-toolkit": "~1.3.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.12.0",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
+    "@angular-devkit/architect": "^0.803.6",
+    "@angular-devkit/build-angular": "^0.803.6",
+    "@angular-devkit/core": "^8.3.6",
+    "@angular-devkit/schematics": "^8.3.6",
+    "@angular/cli": "^8.3.6",
+    "@angular/compiler": "^8.2.8",
+    "@angular/compiler-cli": "^8.2.8",
+    "@angular/language-service": "^8.2.8",
+    "@ionic/angular-toolkit": "^2.0.0",
+    "@types/jasmine": "^3.4.1",
+    "@types/jasminewd2": "^2.0.7",
+    "@types/node": "^12.7.8",
+    "codelyzer": "^5.1.2",
+    "install": "^0.13.0",
+    "ionic": "^5.4.1",
+    "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.4",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma": "^4.3.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.0",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "node-sass": "^4.12.0",
+    "npm": "^6.11.3",
+    "npm-check": "^5.9.0",
     "protractor": "~5.4.0",
-    "ts-node": "~8.0.0",
+    "ts-node": "^8.4.1",
     "tslint": "~5.20.0",
-    "typescript": "~3.1.6"
+    "typescript": "^3.5.3"
   },
   "description": "An Ionic project",
   "cordova": {
