--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cordova-plugin-whitelist": "^1.3.4",
     "cordova-sqlite-storage": "^3.4.0",
     "core-js": "^3.2.1",
+    "ngx-qrcode2": "0.0.9",
     "npm-check-updates": "^3.1.23",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
