--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@ionic-native/core": "^5.14.0",
     "@ionic-native/file-transfer": "^5.14.0",
     "@ionic-native/geolocation": "^5.14.0",
+    "@ionic-native/printer": "^5.15.0",
     "@ionic-native/splash-screen": "^5.14.0",
     "@ionic-native/status-bar": "^5.14.0",
     "@ionic/angular": "^4.10.0",
     "@ionic/storage": "^2.2.0",
     "@swimlane/ngx-datatable": "^16.0.2",
     "cordova-android": "^8.1.0",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-file": "^6.0.2",
@@ -36,6 +38,7 @@
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.2",
+    "cordova-plugin-printer": "^0.7.3",
     "cordova-plugin-splashscreen": "^5.0.3",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
@@ -45,8 +48,7 @@
     "npm-check-updates": "^3.1.23",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
-    "zone.js": "^0.9.1",
-    "cordova-ios": "4.5.5"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.803.6",
@@ -92,7 +94,8 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-file-transfer": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova-plugin-printer": {}
     },
     "platforms": [
       "ios",
