--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@angular/platform-browser-dynamic": "^8.2.8",
     "@angular/router": "^8.2.8",
     "@ionic-native/camera": "^5.14.0",
-    "@ionic-native/core": "^5.14.0",
+    "@ionic-native/core": "^5.15.1",
     "@ionic-native/file-transfer": "^5.14.0",
     "@ionic-native/geolocation": "^5.14.0",
-    "@ionic-native/printer": "^5.15.0",
+    "@ionic-native/printer": "^5.15.1",
     "@ionic-native/splash-screen": "^5.14.0",
     "@ionic-native/status-bar": "^5.14.0",
     "@ionic/angular": "^4.10.0",
@@ -38,12 +38,12 @@
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.2",
-    "cordova-plugin-printer": "^0.7.3",
     "cordova-plugin-splashscreen": "^5.0.3",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
     "cordova-sqlite-storage": "^3.4.0",
     "core-js": "^3.2.1",
+    "isiigo-cordova-plugin-printer": "^1.0.4",
     "ngx-qrcode2": "0.0.9",
     "npm-check-updates": "^3.1.23",
     "rxjs": "^6.5.3",
@@ -74,7 +74,7 @@
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "node-sass": "^4.12.0",
-    "npm": "^6.11.3",
+    "npm": "^6.12.0",
     "npm-check": "^5.9.0",
     "protractor": "~5.4.0",
     "ts-node": "^8.4.1",
